src/objects/Clone_Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Competitor_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Competitor External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <label>Competitor Product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <referenceTo>Competitors__c</referenceTo>
        <relationshipName>Quote_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User_Price__c</fullName>
        <label>End User Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>Quote_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reseller_Price__c</fullName>
        <label>Reseller Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Competitor</label>
    <nameField>
        <label>Competitors #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>